@@ -2,23 +2,27 @@ package io.github.lightman314.lightmanscurrency.items;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nullable;
 
 import io.github.lightman314.lightmanscurrency.LightmansCurrency;
+import io.github.lightman314.lightmanscurrency.common.tickets.TicketSaveData;
 import io.github.lightman314.lightmanscurrency.core.ModItems;
+import io.github.lightman314.lightmanscurrency.core.variants.Color;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.Tag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.TagKey;
+import net.minecraft.world.entity.Entity;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.TooltipFlag;
 import net.minecraft.world.level.Level;
 import net.minecraftforge.registries.ForgeRegistries;
+import org.jetbrains.annotations.NotNull;
 
 public class TicketItem extends Item{
 
@@ -26,7 +30,8 @@ public class TicketItem extends Item{
 	public static final ResourceLocation TICKET_MATERIAL_TAG = new ResourceLocation(LightmansCurrency.MODID,"ticket_material");
 	public static final TagKey<Item> TICKET_MATERIAL_KEY = TagKey.create(ForgeRegistries.Keys.ITEMS, TICKET_MATERIAL_TAG);
 
-	public static final UUID CREATIVE_TICKET_ID = new UUID(0,0);
+	public static final long CREATIVE_TICKET_ID = -1;
+	public static final int CREATIVE_TICKET_COLOR = 0xFFFF00;
 
 	public TicketItem(Properties properties)
 	{
@@ -34,14 +39,15 @@ public class TicketItem extends Item{
 	}
 	
 	@Override
-	public void appendHoverText(ItemStack stack, @Nullable Level level, List<Component> tooltip, TooltipFlag flagIn)
+	public void appendHoverText(@NotNull ItemStack stack, @Nullable Level level, @NotNull List<Component> tooltip, @NotNull TooltipFlag flagIn)
 	{
-		if(Screen.hasShiftDown())
-		{
-			UUID ticketID = GetTicketID(stack);
-			if(ticketID != null)
-				tooltip.add(Component.translatable("tooltip.lightmanscurrency.ticket.id", ticketID));
-		}
+		long ticketID = GetTicketID(stack);
+		if(ticketID >= -1)
+			tooltip.add(Component.translatable("tooltip.lightmanscurrency.ticket.id", ticketID));
+	}
+
+	public void inventoryTick(@NotNull ItemStack stack, @NotNull Level level, @NotNull Entity entity, int slot, boolean selected) {
+		GetTicketID(stack);
 	}
 	
 	public static boolean isMasterTicket(ItemStack ticket)
@@ -50,44 +56,73 @@ public class TicketItem extends Item{
 			return false;
 		return ticket.getItem() == ModItems.TICKET_MASTER.get();
 	}
-	
-	public static UUID GetTicketID(ItemStack ticket)
+
+	public static long GetTicketID(ItemStack ticket)
 	{
 		//Get the ticket item
 		if(ticket.isEmpty() || !(ticket.getItem() instanceof TicketItem) || !ticket.hasTag())
-			return null;
+			return Long.MIN_VALUE;
 		CompoundTag ticketTag = ticket.getTag();
-		if(!ticketTag.contains("TicketID"))
-			return null;
-		return ticketTag.getUUID("TicketID");
+		if(ticketTag.contains("TicketID", Tag.TAG_LONG))
+			return ticketTag.getLong("TicketID");
+		else if(ticketTag.contains("TicketID"))
+		{
+			UUID oldID = ticketTag.getUUID("TicketID");
+			long newID = TicketSaveData.getConvertedID(oldID);
+			ticketTag.putLong("TicketID", newID);
+			ticketTag.putInt("TicketColor", Color.getFromIndex(newID).hexColor);
+			return newID;
+		}
+		return Long.MIN_VALUE;
 	}
+
+	public static int GetTicketColor(ItemStack ticket)
+	{
+		if(ticket.isEmpty() || !(ticket.getItem() instanceof TicketItem) || !ticket.hasTag())
+			return 0xFFFFFF;
+		CompoundTag ticketTag = ticket.getTag();
+		if(!ticketTag.contains("TicketColor"))
+			return 0xFFFFFF;
+		return ticketTag.getInt("TicketColor");
+	}
+
+	public static ItemStack CreateMasterTicket(long ticketID) { return CreateMasterTicket(ticketID, Color.getFromIndex(ticketID).hexColor); }
 	
-	public static ItemStack CreateMasterTicket(UUID ticketID)
+	public static ItemStack CreateMasterTicket(long ticketID, int color)
 	{
 		ItemStack ticket = new ItemStack(ModItems.TICKET_MASTER.get());
-		if(ticketID != null)
-			ticket.getOrCreateTag().putUUID("TicketID", ticketID);
+		CompoundTag tag = ticket.getOrCreateTag();
+		tag.putLong("TicketID", ticketID);
+		tag.putInt("TicketColor", color);
 		return ticket;
 	}
 	
-	public static ItemStack CreateTicket(UUID ticketID)
+	public static ItemStack CreateTicket(long ticketID, int color)
 	{
-		return CreateTicket(ticketID, 1);
+		return CreateTicket(ticketID, color,1);
 	}
 	
-	public static ItemStack CreateTicket(UUID ticketID, int count)
+	public static ItemStack CreateTicket(long ticketID, int color, int count)
 	{
 		ItemStack ticket = new ItemStack(ModItems.TICKET.get(), count);
-		if(ticketID != null)
-			ticket.getOrCreateTag().putUUID("TicketID", ticketID);
+		CompoundTag tag = ticket.getOrCreateTag();
+		tag.putLong("TicketID", ticketID);
+		tag.putInt("TicketColor", color);
 		return ticket;
 	}
-	
+
+	public static void SetTicketColor(ItemStack ticket, Color color) { SetTicketColor(ticket, color.hexColor); }
+
+	public static void SetTicketColor(ItemStack ticket, int color) {
+		CompoundTag tag = ticket.getOrCreateTag();
+		tag.putInt("TicketColor", color);
+	}
+
 	public static MutableComponent getTicketMaterialsList() {
 		MutableComponent list = Component.empty();
 		
 		try {
-			for(Item item : ForgeRegistries.ITEMS.tags().getTag(TICKET_MATERIAL_KEY).stream().collect(Collectors.toList()))
+			for(Item item : ForgeRegistries.ITEMS.tags().getTag(TICKET_MATERIAL_KEY).stream().toList())
 			{
 				list.append(Component.literal("\n")).append(new ItemStack(item).getHoverName());
 			}
