@@ -2,7 +2,6 @@ package io.github.lightman314.lightmanscurrency.util;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.google.common.collect.Lists;
 import com.mojang.datafixers.util.Pair;
@@ -21,7 +20,6 @@ import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 import net.minecraftforge.items.IItemHandler;
-import org.anti_ad.mc.ipnext.item.rule.natives.NbtComparatorRule;
 
 public class InventoryUtil {
 
@@ -538,7 +536,7 @@ public class InventoryUtil {
     }
     
     public static boolean ItemHasTag(ItemStack item, ResourceLocation tag) {
-    	for(TagKey<Item> itemTag : item.getTags().collect(Collectors.toList()))
+    	for(TagKey<Item> itemTag : item.getTags().toList())
     	{
     		if(itemTag.location().equals(tag))
     			return true;
